tests/build/cases/widget_new/incorrect_arg_type1.stderr
error[E0277]: the trait bound `bool: IntoVar<SideOffsets>` is not satisfied
  --> cases/widget_new/incorrect_arg_type1.rs:6:18
   |
6  |         margin = true
   |                  ^^^^ the trait `IntoVar<SideOffsets>` is not implemented for `bool`
   |
   = help: the following implementations were found:
             <bool as IntoVar<AutoSize>>
             <bool as IntoVar<CaptureMode>>
             <bool as IntoVar<Factor>>
             <bool as IntoVar<FontFeatureState>>
           and 4 others
note: required by a bound in `margin_ArgsImpl::<T_margin>::new`
  --> $WORKSPACE/zero-ui/src/properties/layout.rs
   |
   | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
   |                                                ^^^^^^^^^^^^^^^^^^^^ required by this bound in `margin_ArgsImpl::<T_margin>::new`
