tests/build/cases/widget_new/incorrect_arg_type1.rs
use zero_ui::prelude::*;

fn main() {
    let _scope = APP.minimal();
    let _ = Wgt! {
        margin = true
    };
}
